<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_modifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_modifica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtModOrario" />

    <TextView
        android:id="@+id/txtModData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/txtModData"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Modcalendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_Modcalendario" />

    <TextView
        android:id="@+id/txtModOra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtModOra"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtModGiorno"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_ModOrario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/TODO"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/txtModOra"
        app:layout_constraintEnd_toEndOf="@+id/btn_Modcalendario"
        app:layout_constraintTop_toTopOf="@+id/txtModOra"
        app:srcCompat="@drawable/btn_orario" />

    <ImageView
        android:id="@+id/btn_Modcalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:clickable="true"
        android:contentDescription="@string/TODO"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="@+id/txtModGiorno"
        app:layout_constraintStart_toEndOf="@+id/txtModGiorno"
        app:layout_constraintTop_toTopOf="@+id/txtModGiorno"
        app:srcCompat="@drawable/btn_calendario" />

    <TextView
        android:id="@+id/txtModOrario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtModOrario"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ModOrario"
        app:layout_constraintEnd_toEndOf="@+id/txtModData"
        app:layout_constraintTop_toTopOf="@+id/btn_ModOrario" />

    <TextView
        android:id="@+id/txtModGiorno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="70dp"
        android:text="@string/txtModGiorno"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtModOra"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>