<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtModPagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtModPagamento"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtModPagamento"
        app:layout_constraintTop_toBottomOf="@+id/txtModPagamento" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/txtModPagamento"
        app:layout_constraintTop_toBottomOf="@+id/txtModPagamento">

        <RadioButton
            android:id="@+id/radio_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_inApp"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radio_loco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_inLoco"
            android:textSize="18sp"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/imgVisa"
        android:layout_width="253dp"
        android:layout_height="107dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:contentDescription="@string/TODO"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imgMastercard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@drawable/visaimg" />

    <ImageView
        android:id="@+id/imgMastercard"
        android:layout_width="277dp"
        android:layout_height="178dp"
        android:clickable="true"
        android:contentDescription="@string/TODO"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imgPaypal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVisa"
        app:srcCompat="@drawable/mastercardimg" />

    <ImageView
        android:id="@+id/imgPaypal"
        android:layout_width="229dp"
        android:layout_height="194dp"
        android:clickable="true"
        android:contentDescription="@string/TODO"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMastercard"
        app:srcCompat="@drawable/paypalimg" />

    <Button
        android:id="@+id/btnIndietroModPag"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnIndietroModPag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgPaypal"
        app:layout_constraintStart_toStartOf="@+id/txtModPagamento" />

    <Button
        android:id="@+id/btnContinuaModPag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContinuaModPag"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>